Adding AddDefaultTokenProviders, AddSignInManager and Token service JWT(Json Web Token). Add Email(SendGrid API) and SMS(Twilio API) Sender Services.

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,9 @@
   },
   "ConnectionStrings": {
     "DbConnection": "Data source=standardDB.db"
+  },
+  "Token": {
+    "Key": "super secret key",
+    "Issuer": "https://localhost:5001"
   }
 }
