--- a/API/API.csproj
+++ b/API/API.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Identity\" />
     <Folder Include="wwwroot\Uploads\Images\" />
   </ItemGroup>
 
