add AddSwagger services and pipline

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -12,5 +12,11 @@
   "Token": {
     "Key": "super secret key",
     "Issuer": "https://localhost:5001"
+  },
+  "ConstantNames": {
+    "APIProjectName": "WebApplication",
+    "APIVersion": "v1",
+    "SwaggerAPINameAndVirsion": "WebApplication API v1",
+    "SwaggerURL": "/swagger/v1/swagger.json"
   }
 }
