Add inside Configure pipeline Middlware to work with Static files, and add error page, and resetPasswoed.html and js to reset password

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Uploads\Images\" />
+    <Folder Include="wwwroot\Views\AccountManager\" />
   </ItemGroup>
 
 </Project>
