change some Functions in BlogServices and add Architecture Diagrams Drawio

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -18,5 +18,10 @@
     "APIVersion": "v1",
     "SwaggerAPINameAndVirsion": "WebApplication API v1",
     "SwaggerURL": "/swagger/v1/swagger.json"
+  },
+  "UploadsDir": {
+    "Blogs": {
+      "Images": "/Uploads/Blogs/Images/"
+    }
   }
 }
