--- a/API/API.csproj
+++ b/API/API.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Uploads\Images\" />
+    <Folder Include="wwwroot\Uploads\Blogs\Images\" />
     <Folder Include="wwwroot\Views\AccountManager\" />
   </ItemGroup>
 
