update UploadPath variables in Initialize-DefaultData -SeedData if delete SourceCategory delete all rows in BlogCategoryList table with this category

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -22,6 +22,9 @@
   "UploadsDir": {
     "Blogs": {
       "Images": "/Uploads/Blogs/Images/"
+    },
+    "Users": {
+      "Images": "/Uploads/Users/Images/"
     }
   }
 }
